--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="add_item">Add Item</string>
+    <string name="title_activity_edit_item">Edit Item</string>
+    <string name="edit_item_label">Edit Item Below:</string>
+    <string name="save_btn">Save</string>
 
 </resources>
